src/yini_test/cases/golden/lenient/valid/numbers/leading-zero-float.yini
@yini

^ Numbers
val = 0.5

