src/yini_test/cases/golden/lenient/invalid/numbers/malformed-float-trailing-dot.yini
@yini

^ Numbers
val = 3.

